force-app/main/default/objects/Lead/fields/EDF_Converted__c.field-meta.xml
<CustomField>
    <fullName>EDF_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This captures when EDF creates a Contact for a Lead. Not using Standard Lead Conversion. This conversion is done through a separate process</description>
    <label>EDF Converted</label>
    <type>Checkbox</type>
</CustomField>