force-app/main/default/objects/Lead/fields/iContactforSF__iContact_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
    <description>The iContact Contact Id associated with this lead.</description>
    <label>iContact Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>