force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Lead ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>