force-app/main/default/objects/Lead/fields/List_Id__c.field-meta.xml
<CustomField>
    <fullName>List_Id__c</fullName>
    <description>Organization from which the list was acquired. (i.e. NRDC, Nature Conservancy)</description>
    <inlineHelpText>Organization from which the list was acquired. (i.e. NRDC, Nature Conservancy)</inlineHelpText>
    <label>List Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>