force-app/main/default/objects/Lead/fields/List_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>List_Source_Description__c</fullName>
    <description>Descripiton of list purchased for prospecting. (i.e. NRDC High Donors, Nature Conservancy 2010 donors)</description>
    <inlineHelpText>Descripiton of list purchased for prospecting. (i.e. NRDC High Donors, Nature Conservancy 2010 donors)</inlineHelpText>
    <label>List Source Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>