force-app/main/default/objects/Lead/fields/Most_Recent_Solicitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Solicitation_Date__c</fullName>
    <label>Most Recent Solicitation Date</label>
    <type>Date</type>
</CustomField>