force-app/main/default/objects/Lead/fields/No_paper_mail__c.field-meta.xml
<CustomField>
    <fullName>No_paper_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Paper Mail</label>
    <type>Checkbox</type>
</CustomField>