force-app/main/default/objects/Lead/fields/No_Phone__c.field-meta.xml
<CustomField>
    <fullName>No_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Phone</label>
    <type>Checkbox</type>
</CustomField>