force-app/main/default/objects/Lead/fields/npe01__Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>npe01__Preferred_Phone__c</fullName>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <default>true</default>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>