force-app/main/default/objects/Lead/fields/npsp__CompanyPostalCode__c.field-meta.xml
<CustomField>
    <fullName>npsp__CompanyPostalCode__c</fullName>
    <label>Company Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>