force-app/main/default/objects/Lead/recordTypes/Membership_Acquisition.recordType-meta.xml
<RecordType>
    <fullName>Membership_Acquisition</fullName>
    <active>true</active>
    <businessProcess>Membership Acquisition</businessProcess>
    <description>Leads obtained by membership for prospecting</description>
    <label>Membership Acquisition</label>
</RecordType>