force-app/main/default/objects/Lead/validationRules/List_Source_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>List_Source_Description_Required</fullName>
    <active>true</active>
    <description>Require a List Source description if the Lead Source=Purchased List.</description>
    <errorConditionFormula>AND ( ISPICKVAL( LeadSource , &quot;Purchased List&quot;) , ISBLANK( List_Source_Description__c ))</errorConditionFormula>
    <errorMessage>Require a List Source description if the Lead Source=Purchased List.</errorMessage>
</ValidationRule>